# cuda-12-kernel-benchmark-suite

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: benchmark_custom_cuda.py  benchmark_numpy.py  benchmark_torch.py  run_all_benchmarks.py
docs/: CUDA_12_3_Learning_Guide.md  benchmark_methodology.md  profiling_guide.md  troubleshooting.md
extension/: __init__.py  bindings.cpp  kernels.cu  setup.py
scripts/: build_cpp.sh  build_extension.sh  profile_nsight_compute.sh  profile_nsight_systems.sh  setup_env.sh
src/cpp/: main.cpp  timer.hpp
src/cuda/: cuda_utils.cuh  image_preprocess.cu  image_preprocess.cuh  reduction.cu  reduction.cuh  tiled_matmul.cu  tiled_matmul.cuh  vector_add.cu  vector_add.cuh
tests/: test_image_preprocess.py  test_matmul.py  test_reduction.py  test_vector_add.py
