[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cuda-benchmark-suite"
version = "0.1.0"
description = "CUDA 12.3+ custom kernel benchmark suite with PyTorch extension"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
